--- a/css/vkmess.css
+++ b/css/vkmess.css
@@ -1,148 +1,108 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:300);
 
-
-
-body {
-    background: #fff;
+@import "http://fonts.googleapis.com/css?family=Open+Sans:400,600,700";
+* {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
-
-@include keyframes( message-fade-#0580FF ) {
-0% {
-    background-color: $ #0580FF;
-    border-color: $ #0580FF;
-}
-100% {
-    background-color: $ #5BCDFF;
-    border-color: $ #5BCDFF;
-}
-}
-
-@include keyframes( message-fade-gray ) {
-0% {
-    background-color: $ #E5E4EA;
-    border-color: $ #E5E4EA;
-}
-100% {
-    background-color: $ #F5F5F5;
-    border-color: $ #F5F5F5;
-}
-}
-
-.chat {
+.messages-wrapper {
+    background: none repeat scroll 0 0 #fff;
+    color: #FFFFFF;
+    font-family: "Open Sans";
+    line-height: 26px;
+    width: 400px;
     margin: 0 auto;
-    padding: 1em;
-    font-family: 'Raleway', sans-serif;
-    font-size: 16px;
-
-    $ curve-size: 16px;
-
-    max-width: 32em;
-    overflow: hidden;
-
-dt {
+    overflow-X: hidden;
     position: relative;
-    height: 0;
-    color: transparent;
-    pointer-events: none;
-    text-indent: -1500em;
 }
-
-dd {
-    position: relative;
-    margin: 0;
-    padding: 8px 10px;
-    border-radius: 0;
-
-    line-height: 24px;
-
-
-}
-
-.in,
-.out {
-
-&::before {
+.left {
     position: absolute;
-    bottom: 0;
-    width: $ curve-size;
-    height: 2 *$ curve-size;
-    border-color: inherit;
+    top: 0;
+    left: 35px;
+    font-size: 18px
+}
+
+.left:after {
+    border: 3px solid #2095FE;
+    border-right: 3px solid transparent;
+    border-top: 3px solid transparent;
+    content: " ";
+    height: 14px;
+    left: -20px;
+    position: absolute;
+    top: 20px;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    transform: rotate(45deg);
+    width: 14px;
+}
+.right {
+    position: absolute;
+    top: 0;
+    right: 15px;
+    font-size: 18px
+}
+header {
+    color: #2095FE;
+    background: #eee;
+    border: 1px solid #ccc;
+    border-bottom: 1px solid #bbb;
+    box-shadow: 0 1px 2px rgba(1,1,1,0.2);
+    height: 60px;
+    text-align: center;
+    font-size: 20px;
+    line-height: 58px;
+    white-space: nowrap;
+
+}
+header h2 {
+    font-weight: bold;
+    color: #111111;
+}
+.messages-wrapper {
+    padding-top: 10px;
+    position: relative;
+    border: 1px solid #ddd;
+    border-top: 0 none;
+}
+.message {
+    border-radius: 20px 20px 20px 20px;
+    margin: 0 15px 10px;
+    padding: 15px 20px;
+    position: relative;
+}
+.message.to {
+    background-color: #2095FE;
+    color: #fff;
+    margin-left: 80px;
+}
+.message.from {
+    background-color: #E5E4E9;
+    color: #363636;
+    margin-right: 80px;
+}
+.message.to + .message.to,
+.message.from + .message.from {
+    margin-top: -7px;
+}
+.message:before {
+    border-color: #2095FE;
+    border-radius: 50% 50% 50% 50%;
     border-style: solid;
-    border-radius: 50%;
-    border-width: 0 $ curve-size;
+    border-width: 0 20px;
+    bottom: 0;
+    clip: rect(20px, 35px, 42px, 0px);
+    content: " ";
+    height: 40px;
+    position: absolute;
+    right: -50px;
+    width: 30px;
     z-index: -1;
 }
-
-}
-
-.in + dt + .out,
-.out + dt + .in {
-    margin-top: 7px;
-}
-
-.in + dt,
-.out + dt,
-dd:last-child {
-
-&::before {
-    content: '';
-}
-
-}
-
-dt.out {
-    border-color: $ #5BCDFF;
-@include animation( message-fade-#0580FF 100 s 1 );
-}
-
-dd.in {
-    background: $ #5BCDFF;
-    border-color: $ #5BCDFF;
-    color: #fff;
-    margin-left: 2em;
-
-@include animation( message-fade-#0580FF 100 s 1 );
-}
-
-$ tail-width: $ curve-size *
-
-3
-;
-$ tail-height: $ curve-size *
-
-2
-;
-
-dt.out,
-dd.in {
-
-&::before {
-    right: -1 *$ tail-width+ $ curve-size;
-    clip: rect(0.5 *$ tail-height, 0.5 *$ tail-width, $ tail-height, 0);
-}
-
-}
-
-dt.in {
-    border-color: $ #F5F5F5;
-@include animation( message-fade-gray 100 s 1 );
-}
-
-dd.out {
-    background: $ #F5F5F5;
-    border-color: $ #F5F5F5;
-    margin-right: 2em;
-
-@include animation( message-fade-gray 100 s 1 );
-}
-
-dt.in,
-dd.out {
-
-&::before {
-    left: -1 *$ tail-width+ $ curve-size;
-    clip: rect(0.5 *$ tail-height, $ tail-width, $ tail-height, 0.5 *$ tail-width);
-}
-
-}
+.message.from:before {
+    border-color: #E5E4E9;
+    left: -50px;
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
