--- a/BookBlock/css/demo4.css
+++ b/BookBlock/css/demo4.css
@@ -52,6 +52,9 @@
 	line-height: 1.3;
 	margin: 0;
 	font-weight: 300;
+    background-color: #ddd;
+    opacity: 0.4;
+    color: black;
 }
 
 .bb-custom-firstpage h1 span {
