--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,13 +124,14 @@ i {
 #headerwrap {
 	/* background: url(../img/bg01.jpg) no-repeat center top; */
 	background-color: #3498db;
-	margin-top: -20px;
+	background-image:  url('../../images/header.png');
+    margin-top: -20px;
 	padding-top:200px;
 	background-attachment: relative;
 	background-position: center center;
 	min-height: 650px;
 	width: 100%;
-	
+
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
